welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:9: error: reassignment to val
		nbPas = nbPas + 1
                      ^