welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nbPas:Int = 0
for ( nbPas <- 1 to 40){
if (!estFaceMur) {
	avance();
} else {
		droite()
		avance()
		nbPas = nbPas + 1
	}
}
